JedIde/togit/unpackaged/objects/Log_Message__c.object
<CustomObject>
    <description>A custom log message, typically written by an Appirio-authored process, e.g. a trigger or scheduled Apex.  Admins may wish to create workflow alerts to be notified about certain types of log messages.</description>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>To be completed by the IT person that resolves the underlying issue that caused this Log Message.</description>
        <inlineHelpText>To be completed by the IT person that resolves the underlying issue that caused this Log Message.</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box when an IT person resolves whatever underlying issue caused this Log Message.</description>
        <inlineHelpText>Check this box when an IT person resolves whatever underlying issue caused this Log Message.</inlineHelpText>
        <label>Resolved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Server_Pod__c</fullName>
        <description>Which SFDC pod we are currently in.  This can be used as filter criteria in a workflow, to prevent sending email alerts for Log Messages in non-production orgs.</description>
        <formula>MID(
  $Api.Enterprise_Server_URL_290,
  9,
  999
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Which SFDC pod we are currently in.  This can be used as filter criteria in a workflow, to prevent sending email alerts for Log Messages in non-production orgs.</inlineHelpText>
        <label>Server Pod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Public Report Folder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Game_Engine</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Game Engine</value>
        </filters>
        <label>Game Engine</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Game_Engine_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Game Engine</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Game Engine - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity_Split_Errors</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>OpportunitySplitsTrigger</value>
        </filters>
        <label>Opportunity Split Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Opportunity_Split_Errors2</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>OpportunitySplitsTrigger</value>
        </filters>
        <label>Opportunity Split Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PSAScheduleChanged_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Trigger PSAScheduleChanged</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>PSAScheduleChanged - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PSE2Workday</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>PSE2Workday</value>
        </filters>
        <label>PSE2Workday</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PSE2Workday_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>PSE2Workday</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>PSE2Workday - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SFDC_Workday_Interface</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <columns>Resolution__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SFDC-Workday Interface</value>
        </filters>
        <label>SFDC-Workday Interface</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SFDC_Workday_Interface_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>SFDC-Workday Interface</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>SFDC-Workday Interface - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TimeOffInterface</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>TimeOffInterface</value>
        </filters>
        <label>TimeOffInterface</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TimeOffInterface_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>TimeOffInterface</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>TimeOffInterface - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TopcoderChallengeTrigger_Not_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Resolved__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>TopCoderChallengeTrigger</value>
        </filters>
        <filters>
            <field>Resolved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>TopcoderChallengeTrigger - Not Resolved</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LM-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>